tests/compiler/InterfaceDeclaration8/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.3/tests/cases/compiler/InterfaceDeclaration8.ts`, Apache-2.0 License

interface string {
  //~^ ERROR: Interface name cannot be 'string'.
}